Fix some layout issues for UserProfile page

--- a/client/styles/components/_artist.scss
+++ b/client/styles/components/_artist.scss
@@ -1,18 +1,47 @@
+$profile-pic-width-sm: 250px;
+$profile-pic-width-md: 280px;
+$profile-pic-width-lg: 300px;
+$profile-pic-width-4k: 400px;
+
+$profile-pic-height-sm: 250px;
+$profile-pic-height-md: 280px;
+$profile-pic-height-lg: 300px;
+$profile-pic-height-4k: 400px;
+
+
 .artist-info-container {
   padding: 20px 0;
   display: flex;
 
   & .artist-avatar {
+
     display: inline-block;
-    height: 350px;
-    width: 350px;
+    
+    width: $profile-pic-width-md;
+    height: $profile-pic-height-md;
+    @include desktop {
+      width: $profile-pic-width-md;
+      height: $profile-pic-height-md;
+    }
+
+    @include desktop-lg {
+      width: $profile-pic-width-lg;
+      height: $profile-pic-height-lg;
+    }
+
+  height: $profile-pic-height-md;
+  width: $profile-pic-width-md;
+
+  &:hover {
+    cursor: pointer;
   }
+}
 
   & .artist-details {
     display: inline-flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-left: 20px;
+    margin-left: 40px;
 
     & .artist-name {
       margin: 0;
